# beccalossi

./: .gitignore  README.md  main.py  pyproject.toml
datasets/fantacalcio_data/: seriea_calendar.csv
datasets/fantacalcio_data/season_2025_26/: Quotazioni_Fantacalcio_Stagione_2025_26.xlsx
datasets/fantacalcio_data/season_2025_26/votes/: Voti_Fantacalcio_Stagione_2025_26_Giornata_1.xlsx  (+2 more)
datasets/fbref_data/players_keepers/: players_keepers.csv  players_keepersadv.csv
datasets/fbref_data/players_outfield/: players_outfield_defense.csv  players_outfield_gca.csv  players_outfield_misc.csv  players_outfield_passing.csv  players_outfield_passing_types.csv  players_outfield_possession.csv  players_outfield_shooting.csv  players_outfield_standard.csv
datasets/fbref_data/teams_for/: teams_for_defense.csv  teams_for_gca.csv  teams_for_keepers.csv  teams_for_keepersadv.csv  teams_for_misc.csv  teams_for_passing.csv  teams_for_passing_types.csv  teams_for_possession.csv  teams_for_shooting.csv  teams_for_standard.csv
datasets/fbref_data/teams_vs/: teams_vs_defense.csv  teams_vs_gca.csv  teams_vs_keepers.csv  teams_vs_keepersadv.csv  teams_vs_misc.csv  teams_vs_passing.csv  teams_vs_passing_types.csv  teams_vs_possession.csv  teams_vs_shooting.csv  teams_vs_standard.csv
datasets/processed_data/: player_votes.csv
experiments/notebooks/: 01_data_ingestion.ipynb  01_data_ingestion_fbref.ipynb  02_data_ingestion_fantacalcio.ipynb
notebooks/: 01_data_retrieval.ipynb  02_preprocessing.ipynb  03_data_processing.ipynb  04_train_model_and_classify_top_players.ipynb
