[project]
name = "beccalossi"
version = "0.1.0"
description = "An AI-driven assistant for scouting top players in Italian Fantasy Football (Fantacalcio) drafts."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.30.1",
    "loguru>=0.7.3",
    "numpy>=2.2.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.1",
    "streamlit>=1.49.0",
    "tensorflow>=2.20.0",
    "tqdm>=4.67.1",
]
