[project]
name = "beccalossi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "ipykernel>=6.30.1",
    "loguru>=0.7.3",
    "lxml==5.4.0",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "seaborn>=0.13.2",
    "soccerdata>=1.8.2",
]

[dependency-groups]
dev = [
    "ruff>=0.13.0",
]
